[gd_scene load_steps=4 format=3 uid="uid://dqr8vn2p5y6xm"]

[ext_resource type="Script" path="res://ui/race_selection_dialog.gd" id="1"]
[ext_resource type="Theme" uid="uid://c7q6510one1wh" path="res://ui/themes/Underkingdom.tres" id="2_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.08, 0.12, 0.98)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 0.4, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[node name="RaceSelectionDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -280.0
offset_right = 400.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MainVBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/MainVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 20
text = "◆ CHOOSE YOUR RACE ◆"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/MainVBox"]
layout_mode = 2

[node name="ContentHBox" type="HBoxContainer" parent="Panel/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="RacePanel" type="PanelContainer" parent="Panel/MarginContainer/MainVBox/ContentHBox"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2

[node name="RaceList" type="VBoxContainer" parent="Panel/MarginContainer/MainVBox/ContentHBox/RacePanel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="VSeparator" type="VSeparator" parent="Panel/MarginContainer/MainVBox/ContentHBox"]
layout_mode = 2

[node name="InfoPanel" type="PanelContainer" parent="Panel/MarginContainer/MainVBox/ContentHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InfoVBox" type="VBoxContainer" parent="Panel/MarginContainer/MainVBox/ContentHBox/InfoPanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="DescriptionLabel" type="RichTextLabel" parent="Panel/MarginContainer/MainVBox/ContentHBox/InfoPanel/InfoVBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_colors/default_color = Color(0.85, 0.85, 0.85, 1)
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "Race description will appear here."
fit_content = true

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/MainVBox/ContentHBox/InfoPanel/InfoVBox"]
layout_mode = 2

[node name="StatsLabel" type="RichTextLabel" parent="Panel/MarginContainer/MainVBox/ContentHBox/InfoPanel/InfoVBox"]
layout_mode = 2
theme_override_colors/default_color = Color(0.7, 0.9, 0.7, 1)
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "Stat Modifiers: None"
fit_content = true

[node name="HSeparator3" type="HSeparator" parent="Panel/MarginContainer/MainVBox/ContentHBox/InfoPanel/InfoVBox"]
layout_mode = 2

[node name="TraitsLabel" type="RichTextLabel" parent="Panel/MarginContainer/MainVBox/ContentHBox/InfoPanel/InfoVBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.85, 0.85, 0.85, 1)
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "Traits: None"
fit_content = true

[node name="BottomSeparator" type="HSeparator" parent="Panel/MarginContainer/MainVBox"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel/MarginContainer/MainVBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ConfirmButton" type="Button" parent="Panel/MarginContainer/MainVBox/ButtonsContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Select Race"

[node name="CancelButton" type="Button" parent="Panel/MarginContainer/MainVBox/ButtonsContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Back"

[node name="HintSeparator" type="HSeparator" parent="Panel/MarginContainer/MainVBox"]
layout_mode = 2

[node name="HintPanel" type="HBoxContainer" parent="Panel/MarginContainer/MainVBox"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="NavLabel" type="Label" parent="Panel/MarginContainer/MainVBox/HintPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.7, 0.8, 1)
theme_override_font_sizes/font_size = 13
text = "[↑↓] Navigate Races"

[node name="EnterLabel" type="Label" parent="Panel/MarginContainer/MainVBox/HintPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 0.6, 1)
theme_override_font_sizes/font_size = 13
text = "[Enter] Select"

[node name="EscLabel" type="Label" parent="Panel/MarginContainer/MainVBox/HintPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 13
text = "[Esc] Back"

[connection signal="pressed" from="Panel/MarginContainer/MainVBox/ButtonsContainer/ConfirmButton" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/MainVBox/ButtonsContainer/CancelButton" to="." method="_on_cancel_pressed"]
